--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "eslint-plugin-n": "^15.2.3",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.1",
-    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "node-sass": "^7.0.1",
@@ -59,7 +58,13 @@
     "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
+    "formik": "^2.2.9",
+    "hamburger-react": "^2.5.0",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
+    "yup": "^0.32.11"
   }
 }
