--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "deploy:dev": "webpack-dev-server --mode development --hot --open --static",
     "docs:build": "documentation build src/** -f html -o docs",
     "build": "webpack --mode development",
-    "build:prod": "webpack --mode production"
+    "build:prod": "webpack --mode production",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,7 @@
   "bugs": {
     "url": "https://github.com/EAPP93/eapp93.github.io/issues"
   },
-  "homepage": "https://github.com/EAPP93/eapp93.github.io#readme",
+  "homepage": "https://github.com/EAPP93/eapp93.github.io/eapp93.github.io",
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/plugin-transform-modules-commonjs": "^7.18.6",
@@ -59,6 +60,7 @@
   },
   "dependencies": {
     "formik": "^2.2.9",
+    "gh-pages": "^4.0.0",
     "hamburger-react": "^2.5.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
