--- a/package.json
+++ b/package.json
@@ -1,86 +1,29 @@
 {
-  "name": "eapp93.github.io",
-  "version": "1.0.0",
-  "description": "personal website with portfolio",
-  "main": "index.js",
+  "name": "prueba",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ./src",
-    "fix": "eslint --fix ./src",
-    "start": "webpack server --config config/webpack.dev.js",
-    "build": "webpack --config config/webpack.prod.js",
-    "deploy": "gh-pages -d dist"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/EAPP93/eapp93.github.io.git"
-  },
-  "keywords": [
-    "React",
-    "Typescript",
-    "Sass"
-  ],
-  "author": "@EAPP93",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/EAPP93/eapp93.github.io/issues"
-  },
-  "homepage": "https://eapp93.github.io/",
-  "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
-    "babel-cli": "^6.26.0",
-    "babel-loader": "^8.2.5",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.18.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.3",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.30.1",
-    "gh-pages": "^4.0.0",
-    "html-webpack-plugin": "^5.5.0",
-    "merge": "^2.1.1",
-    "mini-css-extract-plugin": "^2.6.1",
-    "react-refresh": "^0.14.0",
-    "sass": "^1.54.4",
-    "sass-loader": "^13.0.2",
-    "source-map-loader": "^4.0.0",
-    "style-loader": "^3.3.1",
-    "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.2                                           "
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "core-js": "^3.24.1",
-    "formik": "^2.2.9",
-    "hamburger-react": "^2.5.0",
-    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "yup": "^0.32.11"
+    "react-dom": "^18.2.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "sass": "^1.69.5",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   }
 }
