--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,14 +11,11 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: PNPM install
-        run: corepack enable
-      
       - name: install package
-        run: pnpm install
-      
+        run: npm install
+
       - name: Build 🔧
-        run: pnpm run build
+        run: npm run build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
