--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,18 +10,15 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
-
-      - name: PNPM install
-        run: corepack enable
       
       - name: install package
-        run: pnpm install
+        run: npm ci
       
       - name: Build 🔧
-        run: pnpm run build
+        run: npm run build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: main
+          branch: website
           folder: dist
