--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "sass": "^1.80.3",
     "typescript": "^5.4.2",
     "vite": "^4.5.2"
   }
